2015-07-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Makefile.am,
	* tp/tests/htmlxref/Makefile.am,
	* tp/tests/htmlxref-only_mono/Makefile.am,
	* tp/tests/htmlxref-only_split/Makefile.am,
	* tp/tests/many_input_files/Makefile.am,
	* tp/tests/run_parser_all.sh,
	* tp/tests/t/stdout.sh,
	* tp/tests/t/stdout_split.sh:
	Look for XSParagraph.la file in $builddir and XSParagraph.pm in
	$srcdir, to facilitate VPATH builds.

2015-07-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/configure.ac: Retrieve
	"privlibexp" Perl configuration value.
	* tp/Texinfo/Convert/XSParagraph/Makefile.am: Use it for 
	-typemap argument to xsubpp.

2015-07-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi: Change "a @node line" back to "an @node 
	line".

2015-07-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* README-hacking: Mention gnupload --user and --replace.  Move 
	dtd version check earlier, and explanations of how to make diffs 
	and upload dtd file earlier.  Explanation of how to upload 
	texi2dvi.  Move explanations of release announcements together.

2015-07-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* util/texi2dvi (local): Remove.  All usages removed.  Rename
	variables in some functions to reduce chances of a conflict.
	Failure to run on a Solaris 10 shell reported by Brian Ripley.

2015-07-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Updating Nodes and Menus)
	(Updating Commands, Printing)
	(@setfilename, @settitle, @titlefont @center @sp)
	(Heading Generation, The Top Node, @setchapternewpage)
	(@headings, @paragraphindent, @firstparagraphindent)
	(Chapter Structuring, Structuring Command Types)
	(@majorheading @chapheading, @section)
	(Raise/lower sections, @node, Writing a Node)
	(@top Command, Node Menu Illustration, Menu Location)
	(Writing a Menu, @ref, @pxref, @code, @kbd, @quotation)
	(@verbatim, @small..., @display, @format, @noindent, @table)